giao dien detail product

--- a/src/style/pages/thems.scss
+++ b/src/style/pages/thems.scss
@@ -7,6 +7,9 @@ $theme-colors :(
 .color-main {
     color: map-get($theme-colors, "main" )
 }
+.container{
+    padding: 0 120px;
+}
 
 
 .button_hover:hover {
