--- a/src/style/pages/all.scss
+++ b/src/style/pages/all.scss
@@ -20,6 +20,15 @@ a {
 ul li {
     list-style: none;
 }
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
 
 .container {
     padding: 0 120px;
