--- a/src/pages/TypeProductsPage/TypeProductsPage.scss
+++ b/src/pages/TypeProductsPage/TypeProductsPage.scss
@@ -1,12 +1,19 @@
-.col_navbar{
-    background:"#fff",;
-    margin-right:"10px";
-    padding:"10px";
-    height: fit-content;
+.type_product{
+    padding: 40px 0;
+
 }
+
+
 
 .pagination-wrapper{
         display: flex;
         justify-content: center;
         margin-top: 30px;
+}
+.title_slug {
+    margin-top: 20px;
+    line-height: 1.5;
+    text-align: center;
+    font-weight: 500;
+    color: #333
 }
