--- a/src/style/pages/all.scss
+++ b/src/style/pages/all.scss
@@ -1,7 +1,12 @@
 @use "sass:map";
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;700&display=swap');
 
 
 @import "./thems.scss";
+
+body, * {
+    font-family: 'Josefin Sans', sans-serif !important;
+}
 
 html,
 body {
@@ -9,6 +14,7 @@ body {
     padding: 0;
     box-sizing: border-box;
 }
+
 
 * {
     // font-family: Roboto;
@@ -30,6 +36,10 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
+a {
+outline: none;
+border: none;
+}
 .container {
     padding: 0 120px;
     
