--- a/src/components/CheckoutComponent/CheckoutComponent.scss
+++ b/src/components/CheckoutComponent/CheckoutComponent.scss
@@ -14,7 +14,7 @@
   
     .checkout_left,.checkout_middle,.checkout_right {
         flex: 1;
-        min-width: 300px;
+        min-width:300px;
         padding: 20px;
         border: 1px solid #ccc;
         border-radius: 8px;
@@ -56,10 +56,16 @@
     .order_summary_table button {
       background-color: #333;
       color: #fff;
-      padding: 8px 18px;
+      padding: 8px;
       border: none;
       border-radius: 4px;
       cursor: pointer;
+    }
+
+    button[disabled] {
+      pointer-events: none;
+      opacity: 0.5;
+      cursor: not-allowed;
     }
 
     .privacy_note {
