--- a/src/pages/CartPage/CartPage.scss
+++ b/src/pages/CartPage/CartPage.scss
@@ -49,6 +49,32 @@
   
 
     }
+
+    
+    .voucher {
+        margin-top: 30px;
+        display: flex;
+        gap:8px;
+        button {
+            background-color: #333;
+            color: #fff;
+            padding: 8px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        
+        button[disabled] {
+            pointer-events: none;
+            opacity: 0.5;
+            cursor: not-allowed;
+        }
+        input {
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+    }
 }
 
 
@@ -66,4 +92,5 @@
     &:hover {
     background-color: #f2f2f2;
     }
+
 }
