--- a/src/components/MyOrderComponent/MyOrderComponent.scss
+++ b/src/components/MyOrderComponent/MyOrderComponent.scss
@@ -9,7 +9,6 @@
 
     table {
     width: 100%;
-    // border-collapse: collapse;
     font-size: 15px;
     background-color: #fff;
     }
@@ -20,7 +19,7 @@
 
     th, td {
         padding: 12px 16px;
-        text-align: left;
+        text-align: center;
         border-bottom: 1px solid #eee;
     }
 
@@ -60,6 +59,13 @@
         background-color: #ef4444; 
     }
 
+     .refund_pending {
+        background-color: #fbbf24; 
+    }
+
+    .refunded {
+        background-color: #6ee7b7; 
+    }
     .view_detail {
         background-color: #3b82f6;
         color: white;
