feat: CRUD Quản lí đơn hàng, tìm kiếm, phân trang, bộ lọc

--- a/src/components/MyOrderComponent/MyOrderComponent.scss
+++ b/src/components/MyOrderComponent/MyOrderComponent.scss
@@ -66,6 +66,10 @@
     .refunded {
         background-color: #6ee7b7; 
     }
+    .completed{
+        background-color: #16a34a;
+    }
+    
     .view_detail {
         background-color: #3b82f6;
         color: white;
