--- a/src/components/OrderDetailComponent/OrderDetailComponent.scss
+++ b/src/components/OrderDetailComponent/OrderDetailComponent.scss
@@ -51,6 +51,9 @@
     .refunded {
         background-color: #6ee7b7; 
     }
+    .completed{
+        background-color: #16a34a;
+    }
 
     .payment_method {
       background-color: #f59e0b;
