--- a/src/components/ProductDetailsCompoent/ProductDetailsCompoent.scss
+++ b/src/components/ProductDetailsCompoent/ProductDetailsCompoent.scss
@@ -14,6 +14,17 @@
         font-size: 20px;
         line-height: 32px;
         color: #000;
+
+        .old_price{
+            text-decoration: line-through;
+            text-decoration-thickness: 1.5px;
+            
+        }
+       .new_price{
+            color:#e30613 ;
+            font-size: 24px;
+            margin-top: -10px;
+       }
     }
 
     .desc_productDetail {
