--- a/src/components/CardComponent/CardComponent.scss
+++ b/src/components/CardComponent/CardComponent.scss
@@ -7,12 +7,9 @@
     width: 100%;
     text-align: center;
     font-weight: 500;
-    // margin-top: 70px;
 
-    .ant-card-cover {
-        position: relative;
-    }
-    .selled-product {
+
+    .discount-product {
         position: absolute;
         top:15px;
         left: 15px;
@@ -37,7 +34,7 @@
         position: absolute;
         top:15px;
         right: 15px;
-          border: 1.6px solid transparent;
+        border: 1.6px solid transparent;
 
     }
 
@@ -76,14 +73,14 @@
         button{
             cursor: pointer;
             margin: 0 15px;
-            padding: 0 10px;
+            padding: 0 5%;
             min-width: 100px;
         }
         .icon_buy,.icon_detail {
             height: 40px;
             width: 42px;
-            padding: 10px 22px;
-            font-size: 26px;
+            padding: 10px 6px;
+            font-size: 24px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -128,4 +125,6 @@
     
    
 }
+
+
 
