--- a/src/pages/TypeProductsPage/TypeProductsPage.scss
+++ b/src/pages/TypeProductsPage/TypeProductsPage.scss
@@ -1,14 +1,19 @@
 .type_product{
     padding: 40px 0;
 
+    .sort_option{
+        display: flex;
+        justify-content: flex-end;
+        padding: 20px 0;
+
+    }
 }
 
 
-
 .pagination-wrapper{
-        display: flex;
-        justify-content: center;
-        margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
 }
 .title_slug {
     margin-top: 20px;
