--- a/src/components/ProductListSection/ProductListSection.scss
+++ b/src/components/ProductListSection/ProductListSection.scss
@@ -1,4 +1,5 @@
 .product_list_section{
+    margin-top: 20px;
     .card {
         display: flex;
         gap: 25px;
@@ -16,7 +17,7 @@
 
     .title {
         text-align: center;
-        padding: 70px 0;
+        padding: 30px 0;
         font-size: 40px;
         color: #000000;
         font-weight: 500;
