Thêm bộ lọc đơn hàng cho user

--- a/src/components/AdminUser/AdminUser.scss
+++ b/src/components/AdminUser/AdminUser.scss
@@ -5,9 +5,10 @@
     }
 
     .btn_add {
-        height: 50px;
-        width: 120px;
+        height: 40px;
+        width: 160px;
         border-radius: 6px;
         border-style: dashed;
+        margin-bottom: 20px;
     }
 }
