--- a/src/pages/CartPage/CartPage.scss
+++ b/src/pages/CartPage/CartPage.scss
@@ -1,5 +1,5 @@
 .cart_page{
-    margin-top: 50px;
+    margin: 55px 0;
     display: flex;
     justify-content: space-evenly;
     gap: 10px;
@@ -52,7 +52,7 @@
 
     
     .voucher {
-        margin-top: 30px;
+        margin-top: 50px;
         display: flex;
         gap:8px;
         button {
