--- a/src/pages/TypeProductsPage/TypeProductsPage.scss
+++ b/src/pages/TypeProductsPage/TypeProductsPage.scss
@@ -17,6 +17,7 @@
 }
 .title_slug {
     margin-top: 20px;
+    margin-bottom: 35px;
     line-height: 1.5;
     text-align: center;
     font-weight: 500;
